@@ -40,6 +40,9 @@ testsuite, not in Python 3.
   * In the same direction, now some libraries are always available: pathlib,
     warnings, queue, gc.
 
+  * Support "DB.get_lk_exclusive()" and "DB.set_lk_exclusive()" if you are
+    linking against Oracle Berkeley DB 5.3 or newer.
+
 18.1.2 - 2020-12-07:
   * Releases 18.1.0 and 18.1.1 were incomplete. Thanks to Mihai.i
     for reporting.
